<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorSecondary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_thumbnail_recepta"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/textView_titol_recepta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_thumbnail_recepta"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/textview_titol"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageValoracio2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="right"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/textView_valoracio_recepta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/valoracio"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/textView_duracio_recepta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_titol_recepta"
                android:layout_alignStart="@+id/textView_titol_recepta"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/duracion"
                android:textAppearance="?attr/textAppearanceListItem"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_descripcio_recepta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_titol_recepta"
            android:layout_below="@+id/textView_duracio_recepta"
            android:layout_margin="10dp"
            android:text="@string/descripcion" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/textView_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/ingredients"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="#ffffff"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pasos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pasos_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="#ffffff"></View>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6166270378015046/2398041126">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Felicidades! has completado la receta."
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/valoracion"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:id="@+id/textView_tuvaloracion"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:numStars="5"
                android:layout_below="@+id/textView_tuvaloracion"
                />

            <Button
                android:id="@+id/button_submit_valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/ratingBar"
                android:layout_marginEnd="20dp"
                android:background="@color/colorOkButton"
                android:text="@string/submitvaloracion"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/compartirreceta"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>


        <ImageButton
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/submitvaloracion"
            android:src="@android:drawable/ic_menu_share"
            android:textColor="@android:color/white" />


    </LinearLayout>
</ScrollView>